Acc info prob fixed, like, unlike functional

--- a/templates/post.html
+++ b/templates/post.html
@@ -10,15 +10,8 @@
             </header>
             <p style="font-size:120%;color:grey" class="description">{{post.description}}</p>{{post.content|safe}}
             <br><br><br>
-            <input onclick="change()" type="button" value="Like" id="likebutton"></input>
+            <button onclick="change()" type="button" value="Like" id="likebutton"><a href="{% url "liked" %}">{{like}}</a></button>
              <div id="footer">Posted on <time datetime="{{post.created|date:"c"}}">{{post.created|date}}</time></div>
-        <script>
-            function change(){
-                var elem = document.getElementById("likebutton");
-                if (elem.value=="Like") elem.value = "Unlike";
-                else elem.value = "Like";
-            }
-        </script>
         </div>
     
 
