Acc info prob fixed, like, unlike functional + AnonymousUser handeled

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -7,7 +7,7 @@
   		Last name :&nbsp;&nbsp;<input type="text" name="lname" value={{lname}}><br>
   		Email     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:&nbsp;&nbsp;<input type="email" name="email" value={{email}}><br>
   		Username  &nbsp;:&nbsp;&nbsp;<input type="text" name="uname" value={{username}}><br>
-  		password  &nbsp;&nbsp;:&nbsp;&nbsp;<input type="password" name="pass" value={{password}}><br>
+  		Phone no  &nbsp;&nbsp;:&nbsp;&nbsp;<input type="text" name="ph_no" value={{ph_no}}><br>
   		<button style = "margin-top:30px; margin-left:50px;"type="submit" value="Submit">Submit</button>
   		<button type="submit" value="Cancel">Cancel</button>
 	</form>
