--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,23 +1,13 @@
 {% extends 'base.html' %}
 {% block content %} 
 <br><br><br><br>
+<h3 style="margin-left:100px;">You can use html tags to configure your post.</h3>
 <div style="border-radius:10px;"class = "post_form">
-	<form style="margin-left:100px;" class="postfield" action="/send_request/" method="get">
-  		<b>Title</b>&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input class="titlef" type="text" name="title"><br>
+	<form style="margin-left:100px;" id = "pst" class="postfield" action="/send_request/" method="get" name="postform">
+  		<b>Title</b>&nbsp;:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input class="titlef" type="text" name="title"><br>
   		<b>Description:</b><input style="margin-bottom:10px;margin-top:10px"class="titlef" type="text" name="descrip"><br>
-  		<label><b>Content:</b> </label> &nbsp;&nbsp;&nbsp;&nbsp;<textarea class="contentf" type="text" name="content"></textarea><br>
-  		<button style = "margin-top:30px; margin-left:500px; width:20em; height:2em;" onclick="return validate()" type="submit" value="Submit"><b>Request</b></button>
-  		<script>
-			function validate(){
-				return confirm("Are you sure u want to submit it");
-			}
-		</script>
+  		<label><b>Content:</b> </label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<textarea class="contentf" type="text" name="content"></textarea><br>
+  		<button style = "margin-top:30px; margin-left:500px; width:20em; height:2em;" onclick="return post_validate()" type="submit" value="Submit"><b>Request</b></button>
 	</form>
-	<script>
-		function validate(){
-				return confirm("Are you sure u want to submit it");
-			}
-		}
-	</script>
 </div>
 {% endblock %}
