--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
 {% load static from staticfiles %}
+
 <html>
     <head>
         <ul class="navigation">
             <li><a class="active" href="{% url "index" %}">Home</a></li>
             <li><a class="active" href="contact.asp">Contact</a></li>
             <li style = "float:right;"><a class="active" href="about.asp">About</a></li>
-            <li style = "floar:right;color:white">Welcome {{username}}</li>
+            <li style = "floar:right;color:white;margin-left:20px;margin-top:15px;">Welcome {{username}}</li>
             {%if notloggedin %}
                 <li style = "float:right;"><a class="active" href="{% url "logpage" %}">Login</a></li>
                 <li style = "float:right;"><a class="active" href="{% url "regpage" %}">Register</a></li>
@@ -14,13 +15,14 @@
                 <li style = "float:right;"><a class="active" href="{% url "logouts" %}">Logout</a></li>
                 <li style = "float:right;"><a class="active" href="{% url "acc_page" %}">My Account</a></li>
             {% endif %}
-            <li style = "float:right;"><form action="/search/" method="get">
+            <li style = "float:right;margin-right:20px;"><form style="margin-top:15px;" action="/search/" method="get">
                 <input type="text" name="q">
                 <input type="submit" value="Search">
             </form></li> 
         </ul>
 
         <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+        <script src="{% static "js/jsscript.js" %}" type="text/javascript"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
