--- a/static/css/style.css
+++ b/static/css/style.css
@@ -135,6 +135,7 @@ div.my_acc_form{
     width: 96%;
     padding: 2%;
     margin: auto;
+    margin-top: 20px;
 }
 .comnt_form{
     border: 1px;
@@ -149,7 +150,7 @@ div.my_acc_form{
     padding:0px 20px;
     border-radius:10px;
     background-color:#FFFFFF;
-    box-shadow:1px 1px 5px rgba(0,0,0,.2);
+    box-shadow:2px 2px 10px rgba(0,0,0,.2);
     border-top:10px solid transparent;
     border-bottom:10px solid transparent;
     border-right: 12px solid #FFF;
