sorted in descending according to likes

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <head>
         <ul class="navigation">
             <li><a class="active" href="{% url "index" %}">Home</a></li>
-            <li><a class="active" href="contact.asp">Contact</a></li>
+            <li><a class="active" href="#">Contact</a></li>
             <li style = "floar:right;color:white;margin-left:20px;margin-top:15px;">Welcome {{username}}</li>
             {%if notloggedin %}
                 <li style = "float:right;"><a class="active" href="{% url "logpage" %}">Login</a></li>
