--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,7 @@
 body{
-        background-color: #fdfdfd;
+        background-image: url("http://orig07.deviantart.net/f7be/f/2013/171/3/0/football_background_by_dmrgraphix-d69wkab.jpg");
+        background-size: 100% 100%;
+        /*background-color: #fdfdfd;*/
         color: #2e2e2e;
         margin: 0;
         padding: 0;
